# TavernProfile

./: Cargo.toml  Plan.md
migration/src/: lib.rs  m20230109_170413_UserTable.rs
src/: app_state.rs  endpoints  main.rs
src/model/: user.rs
src/models/user/: mod.rs  user_entity.rs
src/repository/: mod.rs  user_repository.rs
