[package]
name = "TavernProfile"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = "1.0.152"
serde_json = "1.0"
sea-orm = "0.10.6"
arctic_fox = { git = "https://github.com/adamkali/ArcticFox.git", features = ["arctic_actix"] }

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
